[tool.poetry]
name = "s3"
version = "0.1.0"
description = ""
authors = ["Alexander <cmetanin2006@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.115.0"}
boto3 = "^1.35.32"
uvicorn = "^0.31.0"
jinja2 = "^3.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
